Improved translations for Ukrainian and Russian languages

--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -478,7 +478,7 @@ Golden Ages last 50% longer. During a Golden Age, units receive +1 Movement and 
 
 Polynesia = Полінезія
 Kamehameha I = Камегамега I
-Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. =  Можна одразу сісти на пароплав і рухатися через Узбережжя і Океани. +1 кл. до Атаки. +10 Бойова сила якщо в межах 2 плиток Moaї
+Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. =  Можна одразу сісти на пароплав і рухатися через Узбережжя і Океани. +1 кл. до Атаки. +10 Бойова сила якщо в межах 2 клітинок Moaї
 
 Siam = Таїланд
 Ramkhamhaeng = Рамакхамхаенг
@@ -898,7 +898,7 @@ You have no control over the the production of puppeted cities. = Ви не ма
 Puppeted cities also generate 25% less Gold and Science. = маріонеткові міста також генерують на 25% менше золота та науки.
 A puppeted city can be annexed at any time. = Маріонеткові міста можуть бути анексованими будь-коли
 Liberate = Визволити
-Liberating a city returns it to its original owner, giving you a massive relationship boost with them! = Визволення міста повертає його своєму первісному власнику, надаючи вам масовий приріст відносин з ними!
+Liberating a city returns it to its original owner, giving you a massive relationship boost with them! = Визволення міста повертає його своєму первісному власнику, надаючи вам значний приріст відносин з ними!
 Raze = Зруйнувати
 Razing the city annexes it, and starts razing the city to the ground. = Анексуючи місто ви можете його зруйнувати.
 The population will gradually dwindle until the city is destroyed. = Населення поступово зменшиться, поки місто не буде зруйновано.
@@ -1307,7 +1307,7 @@ Fountain of Youth = Джерело вічної молодості
 # Natural Wonders Uniques
 
 Grants 500 Gold to the first civilization to discover it = Дарує 500 золота першій цивілізації яка відкрила його
-Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Омолоджує (всі ефекти зцілювання подвоюються) сусідні наземлі підрозділи до кінця гри
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Омолоджує (всі ефекти зцілювання подвоюються) сусідні наземні підрозділи до кінця гри
 
 # Resources
 
@@ -1370,7 +1370,7 @@ Manufactory = Фабрика
 Customs house = Митниця
 Moai = Моаї
 +1 additional Culture for each adjacent Moai = +1 культура за кожного сусіднього Моаї
-Can only be built on Coastal tiles = Можна побудувати лише на прибрежній плитці
+Can only be built on Coastal tiles = Можна побудувати лише на прибрежній клітинці
 Barbarian encampment = Табір варварів
 
 # Unit types 
@@ -1399,7 +1399,7 @@ Can build improvements on tiles = Може вдосконалювати кліт
 Ignores terrain cost = Ігнорує штрафи поверхні
 Brute = Кремез
 Warrior = Воїн
-Maori Warrior = Воїн маорі
+Maori Warrior = Воїн Маорі
 Archer = Лучник
 Bowman = Стрілець
 Work Boats = Робочий човен
@@ -1412,8 +1412,8 @@ No defensive terrain bonus = Місцевість не захищає
 Rough terrain penalty = Пересічена місцевість важкопрохідна
 War Chariot = Бойова колісниця
 Spearman = Списник
-Hoplite = Гопліти
-Persian Immortal = Безсмертні
+Hoplite = Гопліт
+Persian Immortal = Безсмертний
 +10 HP when healing = При зціленні здоров’я +10
 Composite Bowman = Складний лук
 Catapult = Катапульта
@@ -1432,7 +1432,7 @@ Galleass = Галеас
 Crossbowman = Арбалет
 Longbowman = Довгий лук
 Chu-Ko-Nu = Чо-ко-ну
-Logistics = Лігістика
+Logistics = Логістика
 1 additional attack per turn = 1 додаткова атака за хід
 Trebuchet = Требушет
 Hwach'a = Хвача
