--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -63,6 +63,8 @@ Temple = Temple
 Burial Tomb = Tombeau
  # Requires translation!
 Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = L'oracle
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'L'Oracle a dit que j'étais le plus sage de tous les grecs. C'est parce que je suis le seul, de tous les grecs, à savoir que je ne sais rien' - Socrate
@@ -1448,6 +1450,8 @@ Landsknecht = Lansquenet
 Knight = Chevalier
 Camel Archer = Archer méhariste
 Conquistador = Conquistador
+ # Requires translation!
+Mandekalu Cavalry = 
 Defense bonus when embarked = Bonus de défense quand embarqué
 Naresuan's Elephant = Elephant de Naresuan
 Samurai = Samuraï
