--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -64,6 +64,8 @@ Temple = Kuil
 Burial Tomb = Makam Terkubur
  # Requires translation!
 Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = Oracle
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'Sang Oracle telah berkata bahwa saya adalah orang yang paling bijak di Yunani. Semua itu karena saya sendirian, dari semua orang Yunani, ketahuilah bahwa saya tidak tahu apa - apa' - Socrates
@@ -1776,6 +1778,8 @@ Knight =
 Camel Archer = 
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
  # Requires translation!
