--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -65,6 +65,8 @@ Temple = Templo
 Burial Tomb = Tumba
  # Requires translation!
 Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = O Oráculo
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'O Oráculo ancião falou que eu era o mais sábio de todos os Gregos. Isso porque apenas eu, de todos os gregos, só sei que nada sei' - Sócrates
@@ -1676,6 +1678,8 @@ Knight = Cavaleiro
 Camel Archer = Arqueiro de camelo
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
 Naresuan's Elephant = Elefante de Naresuan
