--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -88,6 +88,8 @@ Temple = Templu
 Burial Tomb = Loc de veci
  # Requires translation!
 Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = Oracolul
  # Requires translation!
@@ -2060,6 +2062,8 @@ Knight = Cavaler
 Camel Archer = Arcaș pe cămilă
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
  # Requires translation!
