--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -63,6 +63,8 @@ Temple = Templo
 Burial Tomb = Tumba Sagrada
  # Requires translation!
 Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = El Oráculo
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'El oráculo de Delfos ha dicho que soy el más sabio de todos los griegos. Eso es porque, de todos ellos, solo yo sé que no sé nada.' - Sócrates
@@ -1459,6 +1461,8 @@ Knight = Caballero
 Camel Archer = Arquero a camello
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
 Naresuan's Elephant = Elefante Naresuan
