--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -63,6 +63,8 @@ Temple = Храм
 Burial Tomb = Гробниця
  # Requires translation!
 Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = Оракул
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = «Давній оракул сказав, що я наймудріший з греків. Бо я єдиний, хто знає, що нічого не знає.» - Сократ
@@ -1447,6 +1449,8 @@ Landsknecht = Ландскнехт
 Knight = Лицар
 Camel Archer = Лучник на верблюді
 Conquistador = Конкістадор
+ # Requires translation!
+Mandekalu Cavalry = 
 Defense bonus when embarked = Бонус до захисту при підйомі на борт
 Naresuan's Elephant = Слон Наресуана
 Samurai = Самурай
