--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -95,6 +95,8 @@ Temple = Kuil
 Burial Tomb = Tempat Persemadian
  # Requires translation!
 Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
  # Requires translation!
 The Oracle = 
@@ -2502,6 +2504,8 @@ Knight =
 Camel Archer = 
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
  # Requires translation!
