--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -62,6 +62,7 @@ Colossus =
 Temple = 
 Burial Tomb = 
 Doubles Gold given to enemy if city is captured = 
+Mud Pyramid Mosque = 
 
 The Oracle = 
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 
@@ -1445,6 +1446,7 @@ Landsknecht =
 Knight = 
 Camel Archer = 
 Conquistador = 
+Mandekalu Cavalry = 
 Defense bonus when embarked = 
 Naresuan's Elephant = 
 Samurai = 
