Added the "crudely-drawn map" to ancient ruins outcomes
Closes #1640

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -673,6 +673,8 @@ We have discovered the lost technology of [techName] in the ruins! = V troskách
 A [unitName] has joined us! = Jednotka [unitName] se přidala na naši stranu!
 An ancient tribe trains our [unitName] in their ways of combat! = Starodávný kmen cvičí naši jednotku [unitName] v jejich bojových uměních!
 We have found a stash of [amount] gold in the ruins! = Skrýš, která obsahovala [amount] zlata byla objevena v ruinách!
+ # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = Jednotka [unit] dokončila průzkum.
 [unit] has no work to do. = Jednotka [unit] nemá nic dalšího na práci.
 You're losing control of [name]. = Ztratili jsme přátelství s městským státem [name].
