--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -679,6 +679,8 @@ We have discovered the lost technology of [techName] in the ruins! = Kita telah 
 A [unitName] has joined us! = Seorang [unitName] telah bergabung dengan kita!
 An ancient tribe trains our [unitName] in their ways of combat! = Sebuah suku kuno melatih [unitName] kita dalam cara bertarung!
 We have found a stash of [amount] gold in the ruins! = Kita telah menemukan [amount] emas di reruntuhan
+ # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = [unit] selesai menjelajah.
 [unit] has no work to do. = [unit] tidak punya pekerjaan lain.
 You're losing control of [name]. = Anda kehilangan kendali dari [name]
