--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -1081,6 +1081,8 @@ An ancient tribe trains our [unitName] in their ways of combat! =
  # Requires translation!
 We have found a stash of [amount] gold in the ruins! = 
  # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
+ # Requires translation!
 [unit] finished exploring. = 
  # Requires translation!
 [unit] has no work to do. = 
