--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -975,6 +975,8 @@ A [unitName] has joined us! = Un [unitName] ni s-a alăturat!
 An ancient tribe trains our [unitName] in their ways of combat! = Un trib străvechi ne invață un [unitName] metodele lor de luptă!
 We have found a stash of [amount] gold in the ruins! = Am descoperit un depozit de [amount] aur printre ruine!
  # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
+ # Requires translation!
 [unit] finished exploring. = 
  # Requires translation!
 [unit] has no work to do. = 
