--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -93,6 +93,10 @@ Colossus =
 
 Temple = Kuil
 Burial Tomb = Tempat Persemadian
+ # Requires translation!
+Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
  # Requires translation!
 The Oracle = 
@@ -1130,6 +1134,8 @@ Your relationship with [cityStateName] is about to degrade =
 Your relationship with [cityStateName] degraded = 
  # Requires translation!
 A new barbarian encampment has spawned! = 
+ # Requires translation!
+Received [goldAmount] Gold for capturing [cityName] = 
 
 # World Screen UI
 
@@ -2498,6 +2504,8 @@ Knight =
 Camel Archer = 
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
  # Requires translation!
