--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -61,6 +61,10 @@ Colossus = Колосс Родосский
 
 Temple = Храм
 Burial Tomb = Гробница
+ # Requires translation!
+Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = Оракул
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'Он спросил, есть ли кто-нибудь на свете мудрее меня, и Пифия ему ответила, что никого нет мудрее... потому что я коли уж не знаю, то и не думаю, что знаю' - Сократ в «Апологии Сократа» Платона
@@ -688,6 +692,8 @@ We have received [goldAmount] Gold for discovering [naturalWonder] = Мы пол
 Your relationship with [cityStateName] is about to degrade = Ваши отношения с [cityStateName] скоро ухудшатся
 Your relationship with [cityStateName] degraded = Ваши отношения с [cityStateName] ухудшились
 A new barbarian encampment has spawned! = Появился новый лагерь варваров!
+ # Requires translation!
+Received [goldAmount] Gold for capturing [cityName] = 
 
 # World Screen UI
 
@@ -1443,6 +1449,8 @@ Landsknecht = Ландскнехт
 Knight = Рыцарь
 Camel Archer = Лучник на верблюде
 Conquistador = Конкистадор
+ # Requires translation!
+Mandekalu Cavalry = 
 Defense bonus when embarked = Бонус к защите когда погружен на корабль
 Naresuan's Elephant = Слон Наресуана
 Samurai = Самурай
