--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -62,6 +62,10 @@ Colossus = 太阳神巨像
 
 Temple = 神庙
 Burial Tomb = 陵墓
+ # Requires translation!
+Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = 神谕所
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = “先知的神谕曾说我是全希腊最聪明的人。因为我是所有希腊人中唯一知道自己一无所知的人。”——苏格拉底
@@ -704,6 +708,8 @@ Your relationship with [cityStateName] is about to degrade =
 Your relationship with [cityStateName] degraded = 
  # Requires translation!
 A new barbarian encampment has spawned! = 
+ # Requires translation!
+Received [goldAmount] Gold for capturing [cityName] = 
 
 # World Screen UI
 
@@ -1487,6 +1493,8 @@ Knight = 骑士
 Camel Archer = 骆驼骑射手
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
 Naresuan's Elephant = 纳黎萱战象
