--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -77,6 +77,10 @@ Colossus =
 
 Temple = Tempel
 Burial Tomb = Graftombe
+ # Requires translation!
+Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = Het Orakel
  # Requires translation!
@@ -1117,6 +1121,8 @@ Your relationship with [cityStateName] is about to degrade =
 Your relationship with [cityStateName] degraded = 
  # Requires translation!
 A new barbarian encampment has spawned! = 
+ # Requires translation!
+Received [goldAmount] Gold for capturing [cityName] = 
 
 # World Screen UI
 
@@ -2335,6 +2341,8 @@ Knight =
 Camel Archer = 
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
  # Requires translation!
