--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -62,6 +62,10 @@ Colossus = Koloss
 
 Temple = Tempel
 Burial Tomb = Grabstätte
+ # Requires translation!
+Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = Das Orakel
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'Das alte Orakel sagte, dass ich der weiseste aller Griechen sei. Weil ich allein, von allen Griechen, weiß, dass ich nichts weiß.'  -Socrates
@@ -706,6 +710,8 @@ Your relationship with [cityStateName] is about to degrade =
 Your relationship with [cityStateName] degraded = 
  # Requires translation!
 A new barbarian encampment has spawned! = 
+ # Requires translation!
+Received [goldAmount] Gold for capturing [cityName] = 
 
 # World Screen UI
 
@@ -1497,6 +1503,8 @@ Knight = RitterIn
 Camel Archer = Kamel-Bogenschütze
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
 Naresuan's Elephant = Naresuans Elefant
