--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -62,6 +62,10 @@ Colossus = Kolosus
 
 Temple = Kuil
 Burial Tomb = Makam Terkubur
+ # Requires translation!
+Doubles Gold given to enemy if city is captured = 
+ # Requires translation!
+Mud Pyramid Mosque = 
 
 The Oracle = Oracle
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'Sang Oracle telah berkata bahwa saya adalah orang yang paling bijak di Yunani. Semua itu karena saya sendirian, dari semua orang Yunani, ketahuilah bahwa saya tidak tahu apa - apa' - Socrates
@@ -704,6 +708,8 @@ We have received [goldAmount] Gold for discovering [naturalWonder] = Kita telah 
 Your relationship with [cityStateName] is about to degrade = Hubungan Anda dengan Kota Negara [cityStateName] akan memudar
 Your relationship with [cityStateName] degraded = Hubungan Anda dengan Kota Negara [cityStateName] telah pudar
 A new barbarian encampment has spawned! = Sebuah perkemahan orang barbar telah muncul!
+ # Requires translation!
+Received [goldAmount] Gold for capturing [cityName] = 
 
 # World Screen UI
 
@@ -1772,6 +1778,8 @@ Knight =
 Camel Archer = 
  # Requires translation!
 Conquistador = 
+ # Requires translation!
+Mandekalu Cavalry = 
  # Requires translation!
 Defense bonus when embarked = 
  # Requires translation!
