--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -61,6 +61,8 @@ Colossus = Colosso
 
 Temple = Tempio
 Burial Tomb = Sepolcro
+Doubles Gold given to enemy if city is captured = Raddoppia i Gold razziati se la città è conquistata
+Mud Pyramid Mosque = Moschea piramidale di fango
 
 The Oracle = Oracolo
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'L'antico Oracolo ha detto che sono il più saggio di tutti i greci. Questo perché io solo, di tutti i greci, so di non sapere nulla.' - Socrate
@@ -688,6 +690,7 @@ We have received [goldAmount] Gold for discovering [naturalWonder] = Abbiamo ric
 Your relationship with [cityStateName] is about to degrade = Stai perdendo il controllo di [cityStateName]
 Your relationship with [cityStateName] degraded = Tu e [cityStateName] non siete più amici
 A new barbarian encampment has spawned! = È sorto un nuovo accampamento barbaro!
+Received [goldAmount] Gold for capturing [cityName] = Hai ricevuto [goldAmount] per la conquista di [cityName]
 
 # World Screen UI
 
@@ -1443,6 +1446,7 @@ Landsknecht = Lanzichenecco
 Knight = Cavaliere
 Camel Archer = Arciere su cammello
 Conquistador = Conquistador
+Mandekalu Cavalry = Cavalleria Mandekalu
 Defense bonus when embarked = Difesa bonus quando imbarcato
 Naresuan's Elephant = Elefante di Naresuan
 Samurai = Samurai
