--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -61,6 +61,8 @@ Colossus =
 
 Temple = 
 Burial Tomb = 
+Doubles Gold given to enemy if city is captured = 
+Mud Pyramid Mosque = 
 
 The Oracle = 
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 
@@ -688,6 +690,7 @@ We have received [goldAmount] Gold for discovering [naturalWonder] =
 Your relationship with [cityStateName] is about to degrade = 
 Your relationship with [cityStateName] degraded = 
 A new barbarian encampment has spawned! = 
+Received [goldAmount] Gold for capturing [cityName] = 
 
 # World Screen UI
 
@@ -1443,6 +1446,7 @@ Landsknecht =
 Knight = 
 Camel Archer = 
 Conquistador = 
+Mandekalu Cavalry = 
 Defense bonus when embarked = 
 Naresuan's Elephant = 
 Samurai = 
