--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -61,7 +61,7 @@ Colossus = Colosso
 
 Temple = Tempio
 Burial Tomb = Sepolcro
-Doubles Gold given to enemy if city is captured = Raddoppia la quantità d'Oro saccheggiato se la città viene raddoppiata.
+Doubles Gold given to enemy if city is captured = Raddoppia la quantità d'Oro saccheggiato se la città viene conquistata.
 Mud Pyramid Mosque = Moschea della piramide di fango
 
 The Oracle = Oracolo
