Update Italian.properties (#1647)
* Update Italian.properties

Fix

* Update Italian.properties

Fix, again

--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -61,8 +61,8 @@ Colossus = Colosso
 
 Temple = Tempio
 Burial Tomb = Sepolcro
-Doubles Gold given to enemy if city is captured = Raddoppia i Gold razziati se la città è conquistata
-Mud Pyramid Mosque = Moschea piramidale di fango
+Doubles Gold given to enemy if city is captured = Raddoppia la quantità d'Oro saccheggiato se la città viene conquistata.
+Mud Pyramid Mosque = Moschea della piramide di fango
 
 The Oracle = Oracolo
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'L'antico Oracolo ha detto che sono il più saggio di tutti i greci. Questo perché io solo, di tutti i greci, so di non sapere nulla.' - Socrate
