Added the "crudely-drawn map" to ancient ruins outcomes (#1645)
* Added the "crudely-drawn map" to ancient ruins outcomes

Closes #1640

* Extracted the constants for readability

Co-authored-by: Yair Morgenstern <yairm210@hotmail.com>

--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1072,6 +1072,8 @@ A [unitName] has joined us! = Een [unitName] heeft zich bij ons aangesloten!
 An ancient tribe trains our [unitName] in their ways of combat! = Een oude stam traint onze [unitName] in hun manier van vechten!
 We have found a stash of [amount] gold in the ruins! = We hebben een voorraad [amount] Goud gevonden in de ruïnes!
  # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
+ # Requires translation!
 [unit] finished exploring. = 
  # Requires translation!
 [unit] has no work to do. = 
