--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -667,6 +667,8 @@ We have discovered the lost technology of [techName] in the ruins! = Nous avons 
 A [unitName] has joined us! = Un(e) [unitName] nous a rejoint!
 An ancient tribe trains our [unitName] in their ways of combat! = Une tribue ancienne a entrainée notre [unitName] au combat
 We have found a stash of [amount] gold in the ruins! = Nous avons trouvés un tas de [amount] ors dans les ruines!
+ # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = [unit] a fini d'explorer
 [unit] has no work to do. = [unit] n'a rien à faire
 You're losing control of [name]. = Vous perdez le contrôle de [name]
@@ -951,7 +953,6 @@ Clear improvements = Effacer les améliorations
 Clear resource = Effacer les ressources
 Requires = Requiert
 Menu = Menu
- # Requires translation!
 Brush Size = Taille de Brosse
 
 # Civilopedia Tutorials names
