--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -680,6 +680,8 @@ We have discovered the lost technology of [techName] in the ruins! = Wir haben d
 A [unitName] has joined us! = Ein(e) [unitName] hat sich uns angeschlossen!
 An ancient tribe trains our [unitName] in their ways of combat! = Ein antiker Stamm bringt unserer(em) [unitName] dessen Kampftechniken bei!
 We have found a stash of [amount] gold in the ruins! = Wir haben [amount] Gold in den Ruinen gefunden!
+ # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = [unit] hat die Erkundung abgeschlossen.
 [unit] has no work to do. = [unit] hat keine Arbeit mehr.
 You're losing control of [name]. = Die Freundschaft mit [name] wird brüchig.
