--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -665,6 +665,8 @@ We have discovered the lost technology of [techName] in the ruins! = Abbiamo sco
 A [unitName] has joined us! = L'unità [unitName] si è unita a noi!
 An ancient tribe trains our [unitName] in their ways of combat! = Un'antica tribù ha addestrato la nostra unità [unitName] nelle loro arti della guerra!
 We have found a stash of [amount] gold in the ruins! = Abbiamo trovato un tesoro di [amount] pezzi d'oro nelle rovine!
+ # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = [unit] non sta più esplorando.
 [unit] has no work to do. = [unit] è ora inattivo.
 You're losing control of [name]. = Stai perdendo il controllo di [name].
