--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -667,6 +667,8 @@ We have discovered the lost technology of [techName] in the ruins! = Odkryliśmy
 A [unitName] has joined us! = [unitName] włączyła się w nasze szeregi!
 An ancient tribe trains our [unitName] in their ways of combat! = Starożytne plemie nauczyło jednostkę [unitName] ich sztuk walki!
 We have found a stash of [amount] gold in the ruins! = Znaleźliśmy w ruinach [amount] złota!
+ # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = Jednostka [unit] zakończyła eksplorację.
 [unit] has no work to do. = Jednostka [unit] jest bez zajęcia.
 You're losing control of [name]. = Tracisz kontrolę nad [name].
