--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -701,6 +701,8 @@ A [unitName] has joined us! = Um [unitName] se juntou a nós!
 An ancient tribe trains our [unitName] in their ways of combat! = Uma antiga tribo treina nosso [unitName] em suas formas de combate!
 We have found a stash of [amount] gold in the ruins! = Encontramos um estoque de [amount] de ouro nas ruínas!
  # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
+ # Requires translation!
 [unit] finished exploring. = 
  # Requires translation!
 [unit] has no work to do. = 
