--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -667,6 +667,8 @@ We have discovered the lost technology of [techName] in the ruins! = Мы обн
 A [unitName] has joined us! = [unitName] присоединился к нам!
 An ancient tribe trains our [unitName] in their ways of combat! = Древнее племя обучает наших [unitName] своим способам ведения боя!
 We have found a stash of [amount] gold in the ruins! = Мы нашли сундук с [amount] золота в руинах!
+ # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = [unit] завершил исследование местности.
 [unit] has no work to do. = [unit] завершил все доступные работы.
 You're losing control of [name]. = Вы теряете влияние на [name].
