--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -671,6 +671,8 @@ We have discovered the lost technology of [techName] in the ruins! = ¡Hemos des
 A [unitName] has joined us! = ¡Un [unitName] se ha unido a nosotros!
 An ancient tribe trains our [unitName] in their ways of combat! = ¡Una antigua tribu entrena a nuestros [unitName] en sus formas de combate!
 We have found a stash of [amount] gold in the ruins! = ¡Hemos encontrado un alijo de [amount] de oro en las ruinas!
+ # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = [unit] terminó de explorar.
 [unit] has no work to do. = [unit] no tiene trabajo.
 You're losing control of [name]. = Estás perdiendo el control de [name].
