--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -667,6 +667,8 @@ We have discovered the lost technology of [techName] in the ruins! = В руїн
 A [unitName] has joined us! = До нас приєднався підрозділ [unitName]!
 An ancient tribe trains our [unitName] in their ways of combat! = Давнє племʼя навчило їхнього способу битви наш підрозділ [unitName]!
 We have found a stash of [amount] gold in the ruins! = В руїнах знайдено скарб золота кількістю [amount]!
+ # Requires translation!
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = Підрозділ [unit] закінчив обстеження.
 [unit] has no work to do. = Підрозділ [unit] без роботи.
 You're losing control of [name]. = Втрачається контроль над містом-державою [name].
