--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -665,6 +665,7 @@ We have discovered the lost technology of [techName] in the ruins! =
 A [unitName] has joined us! = 
 An ancient tribe trains our [unitName] in their ways of combat! = 
 We have found a stash of [amount] gold in the ruins! = 
+We have found a crudely-drawn map in the ruins! = 
 [unit] finished exploring. = 
 [unit] has no work to do. = 
 You're losing control of [name]. = 
