Prompt dialog for the game exit

--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -757,6 +757,7 @@ Victory status = Статус победы
 Social policies = Общественные институты
 Community = Сообщество
 Close = Закрыть
+Do you want to exit the game? = Вы хотите выйти из игры?
 
 # City screen
 
