--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -1368,6 +1368,8 @@ Social policies =
 Community = 
  # Requires translation!
 Close = 
+ # Requires translation!
+Do you want to exit the game? = 
 
 # City screen
 
